@@ -1,0 +1,6 @@
+from BaseHTTPServer import HTTPServer
+from SocketServer import ThreadingMixIn
+
+
+class ThreadingHTTPServer(ThreadingMixIn, HTTPServer):
+    pass
