@@ -1,6 +1,7 @@
 [1.3.2015]
     Added...: SFTP Server module has been added to the framework!
     Added...: SFTP Client module has been added to the framework.
+    Modified: Modified server web modules to have their required libraries in the "web" folder.
 
 [12.27.2014]
     Added...: Datatype module template has been added to the framework for creating datatype modules.
